--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "express": "^4.14.0",
+    "sequelize": "^3.24.1",
+    "sqlite3": "^3.1.4",
     "underscore": "^1.8.3"
   }
 }
