--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "sidhant",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.13.3",
     "express": "^4.14.0",
     "pg": "^4.4.1",
